# RappIntelligence

./: README.md  main.py  pyproject.toml
Insights/: main.py  tools_rappi.py
data/: rappiData.xlsx
notebook/: 00_EDA.ipynb  01_agentTest.ipynb
scr/: agent.py  api.py  prompts.py  tools.py
src/: api.py
src/bot/: agent.py  prompts.py  tools.py
src/core/: observability.py
src/insights/: main.py  prompts.py  tools.py
static/: index.html
tests/: test_consistency.py
