[project]
name = "rappintelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.4"
dependencies = [
    "deepagents>=0.4.3",
    "fastapi>=0.131.0",
    "kaleido>=1.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-daytona>=0.0.2",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.10",
    "langchainhub>=0.1.21",
    "langfuse>=3.14.5",
    "langgraph>=1.0.9",
    "markdown>=3.10.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pdfkit>=1.0.0",
    "plotly>=6.5.2",
    "python-dotenv>=1.2.1",
    "tabulate>=0.9.0",
    "uvicorn[standard]>=0.41.0",
]
